[gd_scene load_steps=24 format=3 uid="uid://c4gqastokl1qh"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_b0cyn"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="1_l63em"]
[ext_resource type="Texture2D" uid="uid://br43hj4sf1r1l" path="res://assets/mage/forest.png" id="3_2w0ds"]
[ext_resource type="StyleBox" uid="uid://dlrsrdqrd6kj3" path="res://assets/panel_tutorial.tres" id="3_t7m8p"]
[ext_resource type="Texture2D" uid="uid://blyww7sa17sgt" path="res://assets/mage/riverlands.png" id="4_u656s"]
[ext_resource type="Texture2D" uid="uid://g31m48bel7pe" path="res://assets/card/frostcut.png" id="5_bqx62"]
[ext_resource type="Texture2D" uid="uid://dd1tk8qegcw8t" path="res://assets/mage/wilderness.png" id="5_qrkqy"]
[ext_resource type="Texture2D" uid="uid://8eb3ks2y5h1r" path="res://assets/fortune/mountains.png" id="6_g5ud0"]
[ext_resource type="Texture2D" uid="uid://djfe248r85tuq" path="res://assets/ui/Easy.png" id="7_ovbwu"]
[ext_resource type="Texture2D" uid="uid://c46q76532nqk" path="res://assets/custom/Temp.png" id="7_p3r71"]
[ext_resource type="Texture2D" uid="uid://dwb71kp62mh6" path="res://assets/card/temporal_rift.png" id="7_xd2a6"]
[ext_resource type="Theme" uid="uid://cji2vba6wkk5e" path="res://assets/theme_med.tres" id="8_asg1i"]
[ext_resource type="Texture2D" uid="uid://cp2f7fj80pq2i" path="res://assets/mage/Storm.png" id="8_hud22"]
[ext_resource type="Texture2D" uid="uid://k0j5u0imo8k3" path="res://assets/ui/Normal.png" id="8_i7ta0"]
[ext_resource type="Texture2D" uid="uid://c227lgcxce4ol" path="res://assets/ui/Hard.png" id="9_8e5gb"]
[ext_resource type="Texture2D" uid="uid://bxn7jkap77xy2" path="res://assets/ui/Mastery.png" id="10_41bla"]
[ext_resource type="Theme" uid="uid://bdodinwpnjkw8" path="res://assets/theme_huge.tres" id="13_36j2h"]
[ext_resource type="Texture2D" uid="uid://8q2ccj8meee3" path="res://assets/mage/scrapyard.png" id="13_ikn51"]
[ext_resource type="Texture2D" uid="uid://n3bmnhhvec40" path="res://assets/ui/Mastery2.png" id="14_52awb"]
[ext_resource type="Texture2D" uid="uid://da0ootbhd8wa6" path="res://assets/ui/Mastery3.png" id="15_2uty3"]
[ext_resource type="Texture2D" uid="uid://bbnwx5oxkh1ib" path="res://assets/ui/Mastery4.png" id="16_8m5wh"]
[ext_resource type="Texture2D" uid="uid://1ieyrs8dbhl4" path="res://assets/ui/Mastery5.png" id="17_lnnqf"]
[ext_resource type="PackedScene" uid="uid://c0h2vyrb4yxlk" path="res://src/ui/main_menus/statistics_display.tscn" id="23_k8mck"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_b0cyn")

[node name="Root" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_l63em")

[node name="HBox" type="HBoxContainer" parent="Root"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Root/HBox"]
layout_mode = 2
theme = ExtResource("13_36j2h")

[node name="Label" type="Label" parent="Root/HBox/VBox"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Earthrite"
horizontal_alignment = 1

[node name="MarginContinue" type="MarginContainer" parent="Root/HBox/VBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="vbox" type="VBoxContainer" parent="Root/HBox/VBox/MarginContinue"]
layout_mode = 2

[node name="ViewContinue" type="Button" parent="Root/HBox/VBox/MarginContinue/vbox"]
custom_minimum_size = Vector2(1200, 100)
layout_mode = 2
text = "Continue"

[node name="NoSaveFound" type="Label" parent="Root/HBox/VBox/MarginContinue/vbox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.670588, 0.670588, 1)
text = "No save data found"
horizontal_alignment = 1

[node name="SavePreview" type="PanelContainer" parent="Root/HBox/VBox/MarginContinue/vbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("3_t7m8p")

[node name="Grid" type="HBoxContainer" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview"]
layout_mode = 2
alignment = 1

[node name="SaveYear" type="Label" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
text = "Year 7   "

[node name="SaveFarmTexture" type="TextureRect" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
texture = ExtResource("3_2w0ds")
expand_mode = 3

[node name="SaveFarmLabel" type="Label" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
text = " Forest   "

[node name="SaveMageTexture" type="TextureRect" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
texture = ExtResource("5_bqx62")
expand_mode = 3

[node name="SaveMageLabel" type="Label" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
text = " Frost Witch   "

[node name="SaveDiffTexture" type="TextureRect" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
texture = ExtResource("9_8e5gb")
expand_mode = 3

[node name="SaveDiffLabel" type="Label" parent="Root/HBox/VBox/MarginContinue/vbox/SavePreview/Grid"]
layout_mode = 2
text = " Hard"

[node name="MarginNew" type="MarginContainer" parent="Root/HBox/VBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="ViewNewGame" type="Button" parent="Root/HBox/VBox/MarginNew"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "New Game"

[node name="MarginSettings" type="MarginContainer" parent="Root/HBox/VBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="ViewSettings" type="Button" parent="Root/HBox/VBox/MarginSettings"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Settings"

[node name="MarginStats" type="MarginContainer" parent="Root/HBox/VBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="StatsButton" type="Button" parent="Root/HBox/VBox/MarginStats"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Statistics"

[node name="ExitGame" type="Button" parent="Root/HBox/VBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Exit"

[node name="Panel" type="PanelContainer" parent="Root/HBox"]
visible = false
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Root/HBox/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Root/HBox/Panel/Margin"]
layout_mode = 2

[node name="NewGameLabel" type="Label" parent="Root/HBox/Panel/Margin/VBox"]
layout_mode = 2
text = "New Game"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Root/HBox/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Root/HBox/Panel/Margin/VBox/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin"]
layout_mode = 2

[node name="FarmTypeBox" type="HBoxContainer" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox"]
layout_mode = 2
tooltip_text = "Forest: Basic farm type
Riverlands: A river waters tiles but takes up space on the farm
Wilderness: Start with wild plants on your farm and a unique deck with no seed cards
Mountains: Challenge yourself to win using an extremely small farm"

[node name="TypeLabel" type="Label" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/FarmTypeBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Farm Type:"

[node name="TypeOptions" type="OptionButton" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/FarmTypeBox"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
alignment = 1
item_count = 7
selected = 0
allow_reselect = true
popup/item_0/text = "Forest"
popup/item_0/icon = ExtResource("3_2w0ds")
popup/item_0/id = 0
popup/item_1/text = "Mountains"
popup/item_1/icon = ExtResource("6_g5ud0")
popup/item_1/id = 3
popup/item_2/text = "Wilderness"
popup/item_2/icon = ExtResource("5_qrkqy")
popup/item_2/id = 2
popup/item_3/text = "Riverlands"
popup/item_3/icon = ExtResource("4_u656s")
popup/item_3/id = 1
popup/item_4/text = "Lunar Temple"
popup/item_4/icon = ExtResource("7_xd2a6")
popup/item_4/id = 4
popup/item_5/text = "Storm Vale"
popup/item_5/icon = ExtResource("8_hud22")
popup/item_5/id = 5
popup/item_6/text = "Scrapyard"
popup/item_6/icon = ExtResource("13_ikn51")
popup/item_6/id = 6

[node name="DifficultyBox" type="HBoxContainer" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox"]
layout_mode = 2
tooltip_text = "Normal mode makes all numbers 
bigger, increases misfortune, makes
 blight more dangerous, and adds
a difficult Year 11"

[node name="DiffLabel" type="Label" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/DifficultyBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty"

[node name="DiffOptions" type="OptionButton" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/DifficultyBox"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
alignment = 1
item_count = 8
selected = 0
popup/item_0/text = "Easy"
popup/item_0/icon = ExtResource("7_ovbwu")
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/icon = ExtResource("8_i7ta0")
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/icon = ExtResource("9_8e5gb")
popup/item_2/id = 2
popup/item_3/text = "Mastery"
popup/item_3/icon = ExtResource("10_41bla")
popup/item_3/id = 3
popup/item_4/text = "Mastery 2"
popup/item_4/icon = ExtResource("14_52awb")
popup/item_4/id = 4
popup/item_5/text = "Mastery 3"
popup/item_5/icon = ExtResource("15_2uty3")
popup/item_5/id = 5
popup/item_6/text = "Mastery 4"
popup/item_6/icon = ExtResource("16_8m5wh")
popup/item_6/id = 6
popup/item_7/text = "Mastery 5"
popup/item_7/icon = ExtResource("17_lnnqf")
popup/item_7/id = 7

[node name="CharacterBox" type="HBoxContainer" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox"]
layout_mode = 2

[node name="CharLabel" type="Label" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/CharacterBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character: "

[node name="CharOptions" type="OptionButton" parent="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/CharacterBox"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
alignment = 1
item_count = 9
selected = 0
popup/item_0/text = "Novice"
popup/item_0/id = 0
popup/item_1/text = "Ice Mage"
popup/item_1/id = 1
popup/item_2/text = "Fire Mage"
popup/item_2/id = 2
popup/item_3/text = "Blight Mage"
popup/item_3/id = 4
popup/item_4/text = "Water Mage"
popup/item_4/id = 5
popup/item_5/text = "Chaos Mage"
popup/item_5/id = 6
popup/item_6/text = "Void Mage"
popup/item_6/id = 7
popup/item_7/text = "Time Mage"
popup/item_7/id = 8
popup/item_8/text = "Acorn Mage"
popup/item_8/id = 9

[node name="Details" type="MarginContainer" parent="Root/HBox/Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="Root/HBox/Panel/Margin/VBox/HBox/Details"]
layout_mode = 2

[node name="DetailsPrompt" type="Label" parent="Root/HBox/Panel/Margin/VBox/HBox/Details/VBox"]
layout_mode = 2
text = "Farm Type: Test"
horizontal_alignment = 1

[node name="DetailsImg" type="TextureRect" parent="Root/HBox/Panel/Margin/VBox/HBox/Details/VBox"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("7_p3r71")
expand_mode = 1
stretch_mode = 5

[node name="DetailsDescr" type="RichTextLabel" parent="Root/HBox/Panel/Margin/VBox/HBox/Details/VBox"]
layout_mode = 2
theme = ExtResource("8_asg1i")
bbcode_enabled = true
text = "Testing 123"
fit_content = true

[node name="RecordLabel" type="RichTextLabel" parent="Root/HBox/Panel/Margin/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "Best Win:"
fit_content = true

[node name="StartButton" type="Button" parent="Root/HBox/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Start New Game
"

[node name="Spacer" type="Control" parent="Root/HBox/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="Root/HBox/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Back"

[node name="ContPanel" type="PanelContainer" parent="Root/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="Root/HBox/ContPanel"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="ContinueLabel" type="Label" parent="Root/HBox/ContPanel/VBox"]
layout_mode = 2
text = "Continue"
horizontal_alignment = 1

[node name="Margin" type="MarginContainer" parent="Root/HBox/ContPanel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Root/HBox/ContPanel/VBox/Margin"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="Root/HBox/ContPanel/VBox/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="StatsLabel" type="RichTextLabel" parent="Root/HBox/ContPanel/VBox/Margin/VBox/Grid"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true

[node name="DeckLabel" type="RichTextLabel" parent="Root/HBox/ContPanel/VBox/Margin/VBox/Grid"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="ContinueButton" type="Button" parent="Root/HBox/ContPanel/VBox/Margin/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
text = "No save data found"

[node name="Control" type="Control" parent="Root/HBox/ContPanel/VBox/Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="Root/HBox/ContPanel/VBox/Margin/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Back"

[node name="SettingsPanel" type="PanelContainer" parent="Root/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Root/HBox/SettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Root/HBox/SettingsPanel/Margin"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="Root/HBox/SettingsPanel/Margin/VBox"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="TutorialsCheck" type="CheckButton" parent="Root/HBox/SettingsPanel/Margin/VBox"]
layout_mode = 2
text = "Tutorial"

[node name="DebugCheck" type="CheckButton" parent="Root/HBox/SettingsPanel/Margin/VBox"]
layout_mode = 2
tooltip_text = "Dev Mode: Add Skip button to skip 
the year. Allow infinite rerolls in the 
shop to get the cards you want."
text = "Dev Mode"

[node name="ClickModeCheck" type="CheckButton" parent="Root/HBox/SettingsPanel/Margin/VBox"]
layout_mode = 2
text = "Click Mode"

[node name="BackButton" type="Button" parent="Root/HBox/SettingsPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
text = "Back"

[node name="StatisticsPanel" type="PanelContainer" parent="Root/HBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 6

[node name="StatisticsDisplay" parent="Root/HBox/StatisticsPanel" instance=ExtResource("23_k8mck")]
layout_mode = 2

[node name="Introduction" type="CenterContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_l63em")

[node name="Panel" type="PanelContainer" parent="Introduction"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Introduction/Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Introduction/Panel/VBox"]
layout_mode = 2
text = "Introduction"
horizontal_alignment = 1

[node name="Margin" type="MarginContainer" parent="Introduction/Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="StoryLabel" type="RichTextLabel" parent="Introduction/Panel/VBox/Margin"]
custom_minimum_size = Vector2(900, 700)
layout_mode = 2
bbcode_enabled = true
text = "The Great Waldarian Forest was once a quiet and peaceful place. After the Mage Wars left piles of bloody corpses in the wood's most sacred groves, an evil Blight corrupted the forest. Now, plants grow teeth and crawl for leagues across the ground, searching for flesh and blood to feast on.

The Great Blight destroyed your village when you were young. You now return as a novice mage on a quest to heal the forest of its old wounds.

You must grow and harvest plants to generate Mana ([img]res://assets/custom/YellowManaSmall.png[/img]). You will use this mana to perform a cleansing ritual. Complete the ritual ten years in a row to rid the forest of this blight once and for all."

[node name="MarginContainer" type="MarginContainer" parent="Introduction/Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 20

[node name="StoryStartButton" type="Button" parent="Introduction/Panel/VBox/MarginContainer"]
layout_mode = 2
text = "Start"

[node name="TutorialPrompt" type="CenterContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_l63em")

[node name="Panel" type="PanelContainer" parent="TutorialPrompt"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="TutorialPrompt/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TutorialPrompt/Panel/Margin"]
layout_mode = 2

[node name="Label" type="Label" parent="TutorialPrompt/Panel/Margin/VBox"]
layout_mode = 2
text = "Would you like to play a tutorial?
(Re-enable tutorials anytime from the Settings page)"
horizontal_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="TutorialPrompt/Panel/Margin/VBox"]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
border_color = Color(1, 0, 0, 0)

[node name="HBox" type="HBoxContainer" parent="TutorialPrompt/Panel/Margin/VBox"]
layout_mode = 2

[node name="YesButton" type="Button" parent="TutorialPrompt/Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Play Tutorial"

[node name="ReferenceRect" type="ReferenceRect" parent="TutorialPrompt/Panel/Margin/VBox/HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
border_color = Color(1, 0, 0, 0)

[node name="NoButton" type="Button" parent="TutorialPrompt/Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skip Tutorial"

[connection signal="pressed" from="Root/HBox/VBox/MarginContinue/vbox/ViewContinue" to="." method="_on_view_continue_pressed"]
[connection signal="pressed" from="Root/HBox/VBox/MarginNew/ViewNewGame" to="." method="_on_view_new_game_pressed"]
[connection signal="pressed" from="Root/HBox/VBox/MarginSettings/ViewSettings" to="." method="_on_view_settings_pressed"]
[connection signal="pressed" from="Root/HBox/VBox/MarginStats/StatsButton" to="." method="_on_stats_button_pressed"]
[connection signal="pressed" from="Root/HBox/VBox/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="item_selected" from="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/FarmTypeBox/TypeOptions" to="." method="_on_type_options_item_selected"]
[connection signal="item_selected" from="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/DifficultyBox/DiffOptions" to="." method="_on_diff_options_item_selected"]
[connection signal="item_selected" from="Root/HBox/Panel/Margin/VBox/HBox/Margin/VBox/CharacterBox/CharOptions" to="." method="_on_char_options_item_selected"]
[connection signal="pressed" from="Root/HBox/Panel/Margin/VBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Root/HBox/Panel/Margin/VBox/BackButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Root/HBox/ContPanel/VBox/Margin/VBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Root/HBox/ContPanel/VBox/Margin/VBox/BackButton" to="." method="_on_continue_back_button_pressed"]
[connection signal="pressed" from="Root/HBox/SettingsPanel/Margin/VBox/TutorialsCheck" to="." method="_on_tutorials_check_pressed"]
[connection signal="pressed" from="Root/HBox/SettingsPanel/Margin/VBox/DebugCheck" to="." method="_on_debug_check_pressed"]
[connection signal="pressed" from="Root/HBox/SettingsPanel/Margin/VBox/ClickModeCheck" to="." method="_on_click_mode_check_pressed"]
[connection signal="pressed" from="Root/HBox/SettingsPanel/Margin/VBox/BackButton" to="." method="_on_continue_back_button_pressed"]
[connection signal="back" from="Root/HBox/StatisticsPanel/StatisticsDisplay" to="." method="_on_continue_back_button_pressed"]
[connection signal="pressed" from="Introduction/Panel/VBox/MarginContainer/StoryStartButton" to="." method="_on_story_start_button_pressed"]
[connection signal="pressed" from="TutorialPrompt/Panel/Margin/VBox/HBox/YesButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="TutorialPrompt/Panel/Margin/VBox/HBox/NoButton" to="." method="_on_no_button_pressed"]
